Removing unused summary

--- a/examples/Spice example using a Recurrent Neural Networks model in tensorflow.ipynb
+++ b/examples/Spice example using a Recurrent Neural Networks model in tensorflow.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -454,17 +454,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from quick_experiment.models import lstm, mlp\n",
-    "mlp = reload(mlp)\n",
-    "lstm = reload(lstm)\n",
+    "from quick_experiment.models import seq_lstm\n",
     "config = {\n",
-    "    'model': lstm.SeqPredictionModel,\n",
+    "    'model': seq_lstm.SeqLSTMModel,\n",
     "    'model_arguments': {'hidden_layer_size': 20, 'batch_size': 25,\n",
     "                        'logs_dirname': logs_dirname, 'learning_rate': 0.01,\n",
     "                        'log_values': 100, 'training_epochs': 1000, 'max_num_steps': 20}\n",
@@ -474,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -493,21 +491,35 @@
      "output_type": "stream",
      "text": [
       "Fitting\n",
-      "Classifier loss at step 100 (0.09s): 0.00967482291162\n",
-      "Validation accuracy 0.183763489127\n",
-      "Classifier loss at step 200 (0.07s): 0.00470162648708\n",
-      "Validation accuracy 0.183615222573\n",
-      "Classifier loss at step 300 (0.09s): 0.00222669215873\n",
-      "Validation accuracy 0.183615222573\n",
-      "Classifier loss at step 400 (0.09s): 0.00117594748735\n",
-      "Validation accuracy 0.183615222573\n",
-      "Classifier loss at step 500 (0.09s): 0.000678590789903\n",
-      "Validation accuracy 0.183615222573\n",
-      "Classifier loss at step 600 (0.09s): 0.000418027630076\n",
-      "Validation accuracy 0.183615222573\n",
-      "Classifier loss at step 700 (0.09s): 0.000269465672318\n",
-      "Validation accuracy 0.183615222573\n",
-      "Classifier loss at step 800 (0.09s): 0.000179220267455\n"
+      "Classifier loss at step 100 (0.06s): 2.32234048843\n",
+      "Validation performance 0.201591193676\n",
+      "Classifier loss at step 200 (0.09s): 2.29971575737\n",
+      "Validation performance 0.206646263599\n",
+      "Classifier loss at step 300 (0.09s): 2.17955088615\n",
+      "Validation performance 0.18696449697\n",
+      "Classifier loss at step 400 (0.09s): 2.16690039635\n",
+      "Validation performance 0.182362303138\n",
+      "Classifier loss at step 500 (0.09s): 2.16062998772\n",
+      "Validation performance 0.180122405291\n",
+      "Classifier loss at step 600 (0.09s): 2.15684652328\n",
+      "Validation performance 0.177772343159\n",
+      "Classifier loss at step 700 (0.09s): 2.15424728394\n",
+      "Validation performance 0.176242351532\n",
+      "Classifier loss at step 800 (0.09s): 2.15257668495\n",
+      "Validation performance 0.175250917673\n",
+      "Classifier loss at step 900 (0.09s): 2.1512966156\n",
+      "Validation performance 0.174859240651\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Model trained\n",
+      "INFO:root:\n",
+      "\tPrecision\tRecall\tF1 Score\n",
+      "mean\t0.179975294349\t0.179975294349\t0.179975294349\n",
+      "std\t0.0\t0.0\t0.0\n"
      ]
     }
    ],
@@ -518,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -529,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -538,47 +550,53 @@
     {
      "data": {
       "text/plain": [
-       "array([ array([ 6.,  6.,  6.,  5.,  6.,  6.,  6.,  6.,  6.,  5.,  8.,  6.,  6.,\n",
-       "        8.,  6.,  6.,  6.,  6.,  6.,  0.,  6.,  6.,  6.,  5.,  6.,  6.,\n",
-       "        6.,  6.,  6.,  5.,  8.,  6.,  6.,  8.,  6.,  6.,  6.,  6.,  6.,\n",
-       "        0.,  6.,  6.,  6.,  5.,  6.,  6.,  6.,  6.,  6.,  5.,  8.,  6.,\n",
-       "        6.,  8.,  6.,  6.,  6.,  6.,  6.,  0.,  6.,  6.,  6.,  5.,  6.,\n",
-       "        6.,  6.,  6.,  6.,  5.,  8.,  6.,  6.,  8.,  6.,  6.,  6.,  6.,\n",
-       "        6.,  0.,  6.,  6.,  6.,  5.,  6.,  6.,  6.,  6.,  6.,  5.,  8.,\n",
-       "        6.,  6.,  8.,  6.,  6.,  6.]),\n",
-       "       array([ 6.,  6.,  6.,  5.,  6.,  6.,  6.,  6.,  6.,  5.,  8.,  6.,  6.,\n",
-       "        8.,  6.,  6.,  6.,  6.,  6.,  0.,  6.,  6.,  6.,  5.,  6.,  6.,\n",
-       "        6.,  6.,  6.,  5.,  8.,  6.,  6.,  8.]),\n",
-       "       array([ 6.,  6.,  6.,  5.,  6.,  6.,  6.,  6.,  6.,  5.,  8.,  6.,  6.,\n",
-       "        8.,  6.]),\n",
-       "       array([ 6.,  6.,  6.,  5.,  6.,  6.,  6.,  6.,  6.,  5.,  8.,  6.,  6.,\n",
-       "        8.,  6.,  6.,  6.,  6.,  6.,  0.,  6.,  6.,  6.,  5.,  6.,  6.,\n",
-       "        6.,  6.,  6.,  5.,  8.,  6.,  6.,  8.,  6.,  6.]),\n",
-       "       array([ 6.,  6.,  6.,  5.,  6.,  6.,  6.,  6.,  6.,  5.,  8.,  6.,  6.,\n",
-       "        8.,  6.,  6.,  6.,  6.,  6.,  0.,  6.,  6.,  6.,  5.,  6.,  6.,\n",
-       "        6.,  6.,  6.,  5.,  8.,  6.,  6.,  8.,  6.,  6.,  6.,  6.,  6.,\n",
-       "        0.,  6.,  6.,  6.,  5.,  6.,  6.,  6.,  6.,  6.,  5.,  8.,  6.,\n",
-       "        6.,  8.,  6.,  6.,  6.,  6.,  6.,  0.,  6.,  6.,  6.,  5.,  6.,\n",
-       "        6.,  6.,  6.,  6.,  5.,  8.,  6.,  6.,  8.,  6.,  6.,  6.,  6.,\n",
-       "        6.,  0.,  6.,  6.,  6.]),\n",
-       "       array([ 6.,  6.,  6.,  5.,  6.,  6.,  6.,  6.,  6.,  5.,  8.,  6.,  6.,\n",
-       "        8.,  6.,  6.,  6.,  6.,  6.,  0.,  6.,  6.,  6.]),\n",
-       "       array([ 6.,  6.,  6.,  5.,  6.,  6.,  6.,  6.,  6.,  5.,  8.,  6.,  6.,\n",
-       "        8.,  6.,  6.,  6.,  6.,  6.,  0.,  6.,  6.,  6.,  5.,  6.,  6.,\n",
-       "        6.,  6.,  6.,  5.]),\n",
-       "       array([ 6.,  6.,  6.,  5.,  6.,  6.,  6.,  6.,  6.,  5.,  8.,  6.,  6.,\n",
-       "        8.,  6.,  6.,  6.,  6.,  6.,  0.,  6.,  6.,  6.,  5.,  6.,  6.,\n",
-       "        6.,  6.,  6.,  5.,  8.,  6.,  6.,  8.,  6.,  6.,  6.,  6.,  6.,\n",
-       "        0.,  6.,  6.,  6.,  5.,  6.,  6.,  6.,  6.,  6.,  5.,  8.,  6.,\n",
-       "        6.,  8.,  6.,  6.]),\n",
-       "       array([ 6.,  6.,  6.,  5.,  6.,  6.,  6.,  6.,  6.,  5.,  8.,  6.,  6.,\n",
-       "        8.,  6.,  6.,  6.,  6.,  6.,  0.,  6.,  6.,  6.,  5.,  6.,  6.,\n",
-       "        6.,  6.,  6.,  5.,  8.,  6.,  6.,  8.,  6.,  6.,  6.]),\n",
-       "       array([ 6.,  6.,  6.,  5.,  6.,  6.,  6.,  6.,  6.,  5.,  8.,  6.,  6.,\n",
-       "        8.,  6.,  6.,  6.])], dtype=object)"
+       "array([ array([  0.,   7.,   3.,   8.,   5.,   8.,   8.,   7.,   8.,   2.,   8.,\n",
+       "         5.,   5.,   7.,   4.,   0.,   6.,   8.,   8.,   1.,   5.,   1.,\n",
+       "         0.,   6.,   0.,   2.,   8.,   8.,   6.,   5.,   1.,   1.,   6.,\n",
+       "        10.]),\n",
+       "       array([  6.,   3.,   1.,   4.,   6.,   0.,   5.,   6.,   4.,   8.,   5.,\n",
+       "         9.,   6.,   4.,   6.,   5.,   3.,   0.,   5.,   0.,   6.,   6.,\n",
+       "         4.,   6.,   3.,   2.,   6.,   6.,   2.,   3.,   5.,   6.,   5.,\n",
+       "         0.,   4.,   3.,   6.,   4.,   9.,   9.,   4.,   2.,   4.,   3.,\n",
+       "         0.,   6.,   4.,   8.,   8.,   1.,   4.,   8.,   3.,   8.,   6.,\n",
+       "         4.,  10.]),\n",
+       "       array([  1.,   2.,   6.,   2.,   3.,   0.,   6.,   4.,   8.,   0.,   6.,\n",
+       "         4.,   6.,   5.,   3.,   6.,   3.,   3.,   3.,   0.,   7.,   4.,\n",
+       "         5.,   8.,   4.,   6.,   6.,   3.,   1.,   0.,   4.,   2.,   1.,\n",
+       "         5.,   7.,   9.,   1.,   5.,   4.,   6.,   9.,   8.,   3.,   6.,\n",
+       "        10.]),\n",
+       "       array([  8.,   8.,   4.,   0.,   1.,   5.,   6.,   4.,   7.,   1.,   5.,\n",
+       "         6.,   6.,   3.,   6.,   3.,   7.,   0.,   0.,   6.,   4.,   4.,\n",
+       "         6.,   9.,   5.,   6.,   7.,   3.,   1.,   5.,  10.]),\n",
+       "       array([  6.,   6.,   2.,   9.,   9.,   5.,   4.,   1.,   5.,   6.,   2.,\n",
+       "         6.,   3.,   9.,   4.,   4.,   0.,   1.,   1.,   4.,   7.,   8.,\n",
+       "         3.,  10.]),\n",
+       "       array([  2.,   2.,   4.,   9.,   9.,   0.,   2.,   6.,   1.,   9.,   8.,\n",
+       "         8.,  10.]),\n",
+       "       array([  8.,   0.,   6.,   5.,   0.,   9.,   8.,   2.,   2.,   8.,   9.,\n",
+       "         4.,   8.,   4.,   3.,   0.,   8.,   2.,   3.,   8.,   3.,   0.,\n",
+       "         2.,   3.,   5.,   6.,   4.,   8.,   3.,   8.,   6.,   5.,   3.,\n",
+       "         6.,   3.,   1.,   4.,   0.,   2.,   4.,   7.,   6.,   9.,   3.,\n",
+       "         0.,   6.,   8.,   5.,   3.,   6.,   6.,   3.,   9.,  10.]),\n",
+       "       array([  2.,   5.,   1.,   0.,   4.,   5.,   8.,   8.,   1.,   5.,   0.,\n",
+       "         8.,  10.]),\n",
+       "       array([  4.,   5.,   7.,   3.,   6.,   7.,   8.,   8.,   0.,   0.,   6.,\n",
+       "         5.,   0.,   6.,   5.,   8.,   5.,  10.]),\n",
+       "       array([  7.,   3.,   5.,   6.,   0.,   5.,   5.,   2.,   0.,   0.,   8.,\n",
+       "         8.,   6.,   6.,   8.,   2.,   5.,   6.,   4.,   9.,   5.,   6.,\n",
+       "         6.,   6.,   0.,   0.,   6.,   2.,   5.,   8.,   1.,   4.,   6.,\n",
+       "         5.,   1.,   0.,   1.,   4.,   5.,   1.,   5.,   4.,   5.,   6.,\n",
+       "         5.,   4.,   4.,   8.,   9.,   4.,   3.,   7.,   8.,   3.,   6.,\n",
+       "         7.,   8.,   8.,   3.,   9.,   6.,   5.,   1.,   0.,   6.,   1.,\n",
+       "         3.,   3.,   6.,   2.,   1.,   5.,   8.,   4.,   1.,   8.,   3.,\n",
+       "         0.,   1.,   1.,   1.,   6.,   9.,   4.,   5.,   8.,   4.,   2.,\n",
+       "         0.,   3.,   5.,   8.,   6.,   7.,   6.,   9.,   2.,   0.,   3.,\n",
+       "         5.,   4.,   3.,   6.,   8.,   9.,   5.,   4.,   3.,   1.,   1.,\n",
+       "         6.,   6.,   3.,   1.,   0.,   6.,   6.,   1.,   3.,   2.,   6.,\n",
+       "        10.])], dtype=object)"
       ]
      },
-     "execution_count": 319,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,63 +607,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ array([  4.,   4.,   3.,   7.,   6.,   2.,   4.,   8.,   3.,   4.,   6.,\n",
-       "         5.,   9.,   0.,   6.,   9.,   7.,   3.,   5.,   0.,   6.,   1.,\n",
-       "         3.,   1.,   4.,   3.,   8.,   2.,   0.,   4.,   5.,   5.,   6.,\n",
-       "         2.,   6.,   1.,   5.,   3.,   6.,   8.,   5.,   3.,   8.,   6.,\n",
-       "         2.,   6.,   5.,   6.,   8.,   0.,   5.,   6.,   2.,   9.,   0.,\n",
-       "         9.,   6.,   6.,   8.,   3.,   0.,   6.,   4.,   0.,   3.,   8.,\n",
-       "         8.,   5.,   0.,   9.,   8.,   6.,   1.,   6.,   7.,   9.,   6.,\n",
-       "         1.,   3.,   8.,   3.,   3.,   3.,   8.,   0.,   5.,   0.,   5.,\n",
-       "         6.,   6.,   4.,   0.,   3.,   6.,   6.,   1.,  10.]),\n",
-       "       array([  6.,   6.,   7.,   3.,   4.,   1.,   5.,   9.,   1.,   6.,   4.,\n",
-       "         5.,   0.,   7.,   2.,   6.,   3.,   3.,   4.,   4.,   6.,   5.,\n",
-       "         9.,   1.,   2.,   8.,   5.,   5.,   2.,   7.,   1.,   5.,   9.,\n",
-       "        10.]),\n",
-       "       array([  3.,   6.,   6.,   5.,   5.,   2.,   6.,   6.,   3.,   4.,   6.,\n",
-       "         9.,   0.,   8.,  10.]),\n",
-       "       array([  5.,   2.,   1.,   1.,   6.,   8.,   5.,   0.,   5.,   6.,   9.,\n",
-       "         1.,   6.,   0.,   6.,   6.,   1.,   3.,   6.,   2.,   6.,   9.,\n",
-       "         0.,   6.,   1.,   5.,   8.,   5.,   4.,   6.,   1.,   5.,   1.,\n",
-       "         6.,   8.,  10.]),\n",
-       "       array([  3.,   3.,   0.,   7.,   6.,   2.,   3.,   6.,   6.,   4.,   9.,\n",
-       "         9.,   6.,   4.,   5.,   7.,   5.,   6.,   6.,   3.,   3.,   6.,\n",
-       "         0.,   6.,   1.,   1.,   6.,   4.,   6.,   3.,   1.,   0.,   4.,\n",
-       "         3.,   1.,   6.,   7.,   6.,   5.,   6.,   4.,   7.,   1.,   7.,\n",
-       "         5.,   6.,   6.,   5.,   1.,   3.,   0.,   4.,   5.,   5.,   4.,\n",
-       "         6.,   8.,   5.,   6.,   1.,   6.,   0.,   0.,   4.,   4.,   4.,\n",
-       "         7.,   3.,   6.,   4.,   4.,   8.,   5.,   4.,   6.,   5.,   6.,\n",
-       "         6.,   6.,   6.,   9.,   3.,  10.]),\n",
-       "       array([  6.,   1.,   3.,   6.,   1.,   0.,   1.,   3.,   6.,   0.,   8.,\n",
-       "         0.,   6.,   4.,   6.,   3.,   7.,   9.,   0.,   4.,   3.,   7.,\n",
-       "        10.]),\n",
-       "       array([  8.,   2.,   8.,   7.,   1.,   3.,   0.,   8.,   8.,   8.,   3.,\n",
-       "         5.,   7.,   8.,   8.,   8.,   6.,   6.,   2.,   0.,   7.,   0.,\n",
-       "         3.,   8.,   2.,   7.,   6.,   5.,   1.,  10.]),\n",
-       "       array([  6.,   9.,   1.,   5.,   6.,   2.,   3.,   3.,   5.,   4.,   0.,\n",
-       "         5.,   3.,   8.,   0.,   6.,   3.,   1.,   6.,   6.,   9.,   0.,\n",
-       "         6.,   8.,   4.,   9.,   5.,   6.,   6.,   2.,   3.,   7.,   6.,\n",
-       "         8.,   8.,   1.,   7.,   6.,   4.,   6.,   1.,   6.,   2.,   4.,\n",
-       "         8.,   0.,   1.,   6.,   5.,   3.,   5.,   6.,   8.,   8.,   3.,\n",
-       "        10.]),\n",
-       "       array([  5.,   6.,   6.,   6.,   7.,   1.,   1.,   4.,   6.,   9.,   1.,\n",
-       "         8.,   1.,   4.,   3.,   1.,   6.,   6.,   6.,   9.,   5.,   4.,\n",
-       "         7.,   1.,   8.,   0.,   4.,   6.,   3.,   8.,   0.,   7.,   2.,\n",
-       "         5.,   8.,   8.,  10.]),\n",
-       "       array([  4.,   3.,   3.,   6.,   1.,   2.,   6.,   2.,   3.,   2.,   0.,\n",
-       "         0.,   8.,   0.,   2.,   6.,  10.])], dtype=object)"
+       "array([ array([ 3.,  6.,  6.,  6.,  3.,  8.,  6.,  6.,  8.,  3.,  6.,  6.,  6.,\n",
+       "        3.,  8.,  6.,  6.,  3.,  3.,  6.,  3.,  6.,  6.,  6.,  3.,  3.,\n",
+       "        6.,  6.,  8.,  3.,  6.,  6.,  6.,  3.]),\n",
+       "       array([ 6.,  6.,  6.,  3.,  8.,  6.,  6.,  8.,  3.,  6.,  6.,  6.,  3.,\n",
+       "        3.,  6.,  6.,  8.,  3.,  6.,  6.,  6.,  6.,  6.,  3.,  3.,  6.,\n",
+       "        6.,  8.,  3.,  8.,  6.,  6.,  3.,  3.,  6.,  6.,  6.,  3.,  3.,\n",
+       "        6.,  6.,  6.,  6.,  3.,  3.,  6.,  6.,  8.,  3.,  8.,  6.,  6.,\n",
+       "        3.,  3.,  6.,  6.,  6.]),\n",
+       "       array([ 8.,  3.,  8.,  6.,  6.,  3.,  3.,  6.,  6.,  8.,  3.,  6.,  6.,\n",
+       "        6.,  3.,  3.,  6.,  6.,  8.,  3.,  6.,  3.,  8.,  6.,  6.,  8.,\n",
+       "        3.,  8.,  6.,  6.,  3.,  3.,  8.,  6.,  6.,  3.,  3.,  6.,  6.,\n",
+       "        6.,  6.,  3.,  8.,  6.,  6.]),\n",
+       "       array([ 3.,  6.,  6.,  6.,  3.,  8.,  6.,  6.,  3.,  3.,  6.,  6.,  6.,\n",
+       "        3.,  3.,  6.,  6.,  6.,  3.,  3.,  3.,  6.,  6.,  8.,  3.,  8.,\n",
+       "        6.,  6.,  3.,  3.,  6.]),\n",
+       "       array([ 6.,  8.,  3.,  8.,  6.,  6.,  3.,  3.,  6.,  6.,  6.,  3.,  3.,\n",
+       "        6.,  6.,  6.,  3.,  3.,  6.,  6.,  6.,  8.,  3.,  6.]),\n",
+       "       array([ 3.,  3.,  6.,  6.,  8.,  3.,  6.,  6.,  6.,  3.,  8.,  6.,  6.]),\n",
+       "       array([ 8.,  3.,  8.,  6.,  6.,  3.,  3.,  6.,  6.,  6.,  3.,  8.,  6.,\n",
+       "        6.,  3.,  3.,  6.,  6.,  6.,  3.,  8.,  3.,  6.,  6.,  6.,  3.,\n",
+       "        3.,  6.,  6.,  6.,  8.,  8.,  6.,  6.,  8.,  3.,  6.,  6.,  6.,\n",
+       "        3.,  8.,  3.,  8.,  6.,  6.,  8.,  3.,  8.,  6.,  6.,  3.,  3.,\n",
+       "        6.,  6.]),\n",
+       "       array([ 6.,  6.,  6.,  3.,  8.,  6.,  6.,  8.,  3.,  6.,  6.,  6.,  3.]),\n",
+       "       array([ 6.,  6.,  3.,  3.,  6.,  6.,  8.,  3.,  8.,  6.,  6.,  3.,  3.,\n",
+       "        6.,  6.,  6.,  3.,  8.]),\n",
+       "       array([ 6.,  6.,  3.,  3.,  6.,  6.,  8.,  3.,  6.,  6.,  6.,  3.,  3.,\n",
+       "        6.,  6.,  8.,  3.,  6.,  6.,  6.,  6.,  6.,  3.,  3.,  6.,  6.,\n",
+       "        6.,  3.,  3.,  6.,  6.,  6.,  3.,  8.,  6.,  6.,  8.,  3.,  6.,\n",
+       "        6.,  6.,  6.,  3.,  3.,  6.,  6.,  6.,  3.,  8.,  6.,  6.,  8.,\n",
+       "        3.,  8.,  6.,  6.,  3.,  3.,  6.,  6.,  6.,  6.,  3.,  3.,  6.,\n",
+       "        6.,  6.,  3.,  8.,  6.,  6.,  3.,  3.,  6.,  6.,  6.,  3.,  8.,\n",
+       "        6.,  6.,  6.,  6.,  3.,  3.,  6.,  6.,  6.,  3.,  3.,  6.,  6.,\n",
+       "        6.,  3.,  8.,  6.,  6.,  3.,  3.,  6.,  6.,  6.,  6.,  3.,  3.,\n",
+       "        6.,  6.,  6.,  3.,  3.,  6.,  6.,  6.,  3.,  3.,  6.,  6.,  8.,\n",
+       "        3.,  8.,  6.,  6.,  6.])], dtype=object)"
       ]
      },
-     "execution_count": 320,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,13 +665,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "\n"
+    "all_true = numpy.concatenate(true)\n",
+    "all_predicted = numpy.concatenate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "---\n"
    ]
   }
  ],
